--- a/index.html
+++ b/index.html
@@ -30,6 +30,130 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>
+        <div>
+            <img src="images/favicon.ico" alt="">
+            <h1><a href="#">SooYeon</a>
+            </h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#my-work"">My Work</a></li>
+                <li><a href=" #testimonial">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
+
+            </ul>
+
+        </nav>
+    </header>
+    <!-- main -->
+    <main>
+        <!-- home -->
+        <section id="home">
+            <img src="images/sooyeon.png" alt="Sooyeon">
+            <div>
+                <h2>Hello</h2>
+                <span>I'm Front-end developer, SooYeon</span>
+                <span>A software engineer currently residing in Aurora, CO </span>
+                <button>Contact me</button>
+            </div>
+        </section>
+        <!-- about -->
+        <section id="about">
+            <h2>About me</h2>
+            <p>dddddddddddd</p>
+            <div class="frontend">
+                <div>icon</div>
+                <span>Front-end</span>
+                <span>HTML, CSS, JavaScript, TypeScript, React, Vue, Web APIs </span>
+            </div>
+            <div class="backend">
+                <div>icon</div>
+                <span>Back-end</span>
+                <span>Java, JavaScript, Go, NodejS, Rest APIs, GraphGL</span>
+            </div>
+            <div class="mobile">
+                <div>icon</div>
+                <span>Mobile</span>
+                <span>Android, iOS, React Native, Flutter, Java, Swift, Kotlin</span>
+            </div>
+        </section>
+        <!-- skills -->
+        <section id="skills">
+            <h2>My Skills</h2>
+            <span>skills&Attributes</span>
+            <p>Passion for learning new technologies. Capable of working within a team environemt and independently.
+                Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.</p>
+            <div>
+                <div class="coding-skills">
+                    <h3>Coding Skills</h3>
+                    <label for="progress-bar">HTML</label>
+                    <progress id="progress-bar" value="70" max="100">70 %</progress>
+                    <label for="progress-bar">CSS</label>
+                    <progress id="progress-bar" value="70" max="100">70 %</progress>
+                    <label for="progress-bar">JavaScript</label>
+                    <progress id="progress-bar" value="70" max="100">70 %</progress>
+                    <label for="progress-bar">TypeScript</label>
+                    <progress id="progress-bar" value="70" max="100">70 %</progress>
+                    <label for="progress-bar">React</label>
+                    <progress id="progress-bar" value="70" max="100">70 %</progress>
+                    <label for="progress-bar">NodejS</label>
+                    <progress id="progress-bar" value="70" max="100">70 %</progress>
+                </div>
+                <div class="tools">
+                    <h3>Tools</h3>
+                    <ul>
+                        <li>Visual Studio Code</li>
+                        <li>iOS development tools</li>
+                        <li>Intellij</li>
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h2>Etc</h2>
+                    <span>Git</span>
+                </div>
+            </div>
+        </section>
+        <!-- my work -->
+        <section id="my-work">
+            <h2>My work</h2>
+            <span>project</span>
+            <div>
+                <button>All</button>
+                <button>Front-end</button>
+                <button>Back-end</button>
+                <button>Mobile</button>
+            </div>
+        </section>
+        <!-- testimonial -->
+        <sectionv id="testimonial">
+            <h2>Testimonials</h2>
+            <span>Se what they say about me</span>
+            <img src="" alt="">
+            <p>dddddd</p>
+            <p>ddddd</p>
+            <img src="" alt="">
+        </sectionv>
+        <!-- Arrow up -->
+        <aside></aside>
+
+
+    </main>
+    <!-- Footer -->
+    <footer>
+        <div id="contact">
+            <h2>Let's talk</h2>
+            <span>soolotus632@gmail.com</span>
+            <span>Git</span>
+            <span>Linked In</span>
+        </div>
+
+
+    </footer>
 
 </body>
 
