--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
     <main>
         <!-- home -->
         <section id="home">
-            <img src="images/sooyeon.png" alt="Sooyeon">
+            <img src="images/sooyeon.png" alt="SooYeon">
             <div>
-                <h2>Hello</h2>
-                <span>I'm Front-end developer, SooYeon</span>
-                <span>A software engineer currently residing in Aurora, CO </span>
-                <button>Contact me</button>
+                <h2>Hello I'm Front-end developer, SooYeon</h2>
+                <p>A software engineer currently residing in Aurora, CO</p>
+                <a href="#contact">Contact me</a>
             </div>
         </section>
         <!-- about -->
