--- a/index.html
+++ b/index.html
@@ -64,22 +64,42 @@
         <!-- about -->
         <section id="about">
             <h2>About me</h2>
-            <p>dddddddddddd</p>
-            <div class="frontend">
-                <div>icon</div>
-                <span>Front-end</span>
-                <span>HTML, CSS, JavaScript, TypeScript, React, Vue, Web APIs </span>
-            </div>
-            <div class="backend">
-                <div>icon</div>
-                <span>Back-end</span>
-                <span>Java, JavaScript, Go, NodejS, Rest APIs, GraphGL</span>
-            </div>
-            <div class="mobile">
-                <div>icon</div>
-                <span>Mobile</span>
-                <span>Android, iOS, React Native, Flutter, Java, Swift, Kotlin</span>
-            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus pariatur, aspernatur animi rem saepe
+                optio, obcaecati perferendis ipsam accusamus aperiam veritatis autem id officia in placeat omnis maiores
+                provident sunt!</p>
+            <ul>
+                <li class="frontend">
+                    <i class="fa-brands fa-html5"></i>
+                    <p>Front-end</p>
+                    <p>HTML, CSS, JavaScript, TypeScript, React, Vue, Web APIs </p>
+                </li>
+                <li class="backend">
+                    <i class="fa-solid fa-server"></i>
+                    <p>Back-end</p>
+                    <p>Java, JavaScript, Go, NodeJs, Rest APIs, GraphQL</p>
+                </li>
+                <li class="mobile">
+                    <i class="fa-solid fa-mobile"></i>
+                    <p>Mobile</p>
+                    <p>Android, iOS, React Native, Flutter, Java, Swift, Kotlin</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <img src="images/jobs/google.png" alt="google logo" />
+                    <div>
+                        <p>Google as Senior Software Engineer</p>
+                        <p>2019 Oct - Until now</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/jobs/samsung.png" alt="samsung logo" />
+                    <div>
+                        <p>Samsung as Software Engineer</p>
+                        <p>2014 Sept - 2019 Oct</p>
+                    </div>
+                </li>
+            </ul>
         </section>
         <!-- skills -->
         <section id="skills">
