--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#my-work"">My Work</a></li>
+                <li><a href="#work"">My Work</a></li>
                 <li><a href=" #testimonial">Testimonials</a></li>
                 <li><a href="#contact">Contact</a></li>
 
@@ -102,9 +102,9 @@
             </ul>
         </section>
         <!-- skills -->
-        <section id="skills">
+        <!-- <section id="skills">
             <h2>My Skills</h2>
-            <span>skills&Attributes</span>
+            <p>skills &Attributes</p>
             <p>Passion for learning new technologies. Capable of working within a team environemt and independently.
                 Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.</p>
             <div>
@@ -136,17 +136,154 @@
                     <span>Git</span>
                 </div>
             </div>
-        </section>
-        <!-- my work -->
-        <section id="my-work">
-            <h2>My work</h2>
-            <span>project</span>
+        </section> -->
+        <section id="skills">
+            <h2>My Skills</h2>
+            <p>Skills & Attributes</p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias
+                doloremque sint deleniti vel quod itaque molestias, suscipit dolor
+                cupiditate saepe rem minima, amet ipsum accusantium architecto
+                laboriosam dolore id necessitatibus?
+            </p>
             <div>
-                <button>All</button>
-                <button>Front-end</button>
-                <button>Back-end</button>
-                <button>Mobile</button>
+                <section>
+                    <h3>Coding Skills</h3>
+                    <ul>
+                        <li>
+                            <div><span>HTML</span><span>98%</span></div>
+                            <div>
+                                <div style="width: 98%"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <div><span>CSS</span><span>90%</span></div>
+                            <div>
+                                <div style="width: 90%"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <div><span>JavaScript</span><span>90%</span></div>
+                            <div>
+                                <div style="width: 90%"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <div><span>TypeScript</span><span>80%</span></div>
+                            <div>
+                                <div style="width: 80%"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <div><span>React</span><span>79%</span></div>
+                            <div>
+                                <div style="width: 79%"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <div><span>NodeJs</span><span>68%</span></div>
+                            <div>
+                                <div style="width: 68%"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Tools</h3>
+                    <ul>
+                        <li>Visual Studio Code</li>
+                        <li>IntelliJ</li>
+                        <li>Android Studio Code</li>
+                        <li>iOS development tools</li>
+                        <li>Sketch app</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Etc</h3>
+                    <ul>
+                        <li>Git</li>
+                        <li>Scrum Master</li>
+                        <li>Math</li>
+                    </ul>
+                </section>
             </div>
+        </section>
+
+        <!-- my work -->
+        <section id="work">
+            <h2>My work</h2>
+            <p>project</p>
+            <ul>
+                <li><button>All <span>8</span>
+                    </button>
+                </li>
+                <li><button>Front-end<span>3</span>
+                    </button>
+                </li>
+                <li><button>Back-end <span>3</span></button></li>
+                <li><button>Mobile <span>2</span></button></li>
+            </ul>
+            <ul>
+                <li><a href="#" target="_blank">
+                        <img src="images/projects/project1.webp" alt="project1" />
+                        <div>
+                            <h3>Project #1</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a>
+                </li>
+
+                <li><a href="#" target="_blank">
+                        <img src="images/projects/project2.webp" alt="project2" />
+                        <div>
+                            <h3>Project #2</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a></li>
+                <li><a href="#" target="_blank">
+                        <img src="images/projects/project3.webp" alt="project3" />
+                        <div>
+                            <h3>Project #3</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a></li>
+                <li><a href="#" target="_blank">
+                        <img src="images/projects/project4.webp" alt="project4" />
+                        <div>
+                            <h3>Project #4</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a></li>
+                <li><a href="#" target="_blank">
+                        <img src="images/projects/project5.webp" alt="project5" />
+                        <div>
+                            <h3>Project #5</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a></li>
+                <li><a href="#" target="_blank">
+                        <img src="images/projects/project6.webp" alt="project6" />
+                        <div>
+                            <h3>Project #6</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a></li>
+                <li><a href="#" target="_blank">
+                        <img src="images/projects/project7.webp" alt="project7" />
+                        <div>
+                            <h3>Project #7</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a></li>
+                <li><a href="#" target="_blank">
+                        <img src="images/projects/project8.webp" alt="project8" />
+                        <div>
+                            <h3>Project #8</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                    </a></li>
+            </ul>
+
         </section>
         <!-- testimonial -->
         <sectionv id="testimonial">
