--- a/index.html
+++ b/index.html
@@ -288,7 +288,38 @@
         <!-- testimonial -->
         <sectionv id="testimonial">
             <h2>Testimonials</h2>
-            <span>Se what they say about me</span>
+            <p>Se what they say about me</p>
+            <ul>
+                <li>
+                    <img src="images/testimonials/people1.webp" alt="person1" />
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem tempore quo a aperiam ad
+                            molestiae nostrum hic ratione fugiat? Placeat expedita consequatur perferendis ad?
+                            Reiciendis incidunt sunt quaerat perspiciatis cumque.</p>
+                        <p><a href="#">Medeline</a> / Oxford</p>
+                    </div>
+
+                </li>
+
+                <li>
+                    <img src="images/testimonials/people2.webp" alt="person2" />
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem tempore quo a aperiam ad
+                            molestiae nostrum hic ratione fugiat? Placeat expedita consequatur perferendis ad?
+                            Reiciendis incidunt sunt quaerat perspiciatis cumque.</p>
+                        <p><a href="#">Medeline</a> / Oxford</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/testimonials/people3.webp" alt="person3" />
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem tempore quo a aperiam ad
+                            molestiae nostrum hic ratione fugiat? Placeat expedita consequatur perferendis ad?
+                            Reiciendis incidunt sunt quaerat perspiciatis cumque.</p>
+                        <p><a href="#">Medeline</a> / Oxford</p>
+                    </div>
+                </li>
+            </ul>
             <img src="" alt="">
             <p>dddddd</p>
             <p>ddddd</p>
