--- a/index.html
+++ b/index.html
@@ -320,13 +320,15 @@
                     </div>
                 </li>
             </ul>
-            <img src="" alt="">
-            <p>dddddd</p>
-            <p>ddddd</p>
-            <img src="" alt="">
+
         </sectionv>
         <!-- Arrow up -->
-        <aside></aside>
+        <aside>
+            <a href="#home" title="back to top">
+                <i class="fa-solid fa-arrow-up"></i>
+            </a>
+
+        </aside>
 
 
     </main>
@@ -334,7 +336,15 @@
     <footer>
         <div id="contact">
             <h2>Let's talk</h2>
-            <span>soolotus632@gmail.com</span>
+            <p>soolotus632@gmail.com</p>
+            <ul>
+                <li><a href="https://github.com/soolotus" targer="_blank" title="my github">
+                        <i class="fa-brands fa-github"></i></a>
+                </li>
+                <li><a href="https://www.linkedin.com/in/soo-yeon-seong-711313233/" targer="_blank" title="my github">
+                        <i class="fa-brands fa-linkedin"></i></a>
+                </li>
+            </ul>
             <span>Git</span>
             <span>Linked In</span>
         </div>
