--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
     <main>
         <!-- home -->
         <section id="home">
-            <img src="images/sooyeon.png" alt="SooYeon">
+            <img class="home__avatar" src="images/sooyeon.png" alt="SooYeon">
             <div>
-                <h2>Hello I'm Front-end developer, SooYeon</h2>
-                <p>A software engineer currently residing in Aurora, CO</p>
-                <a href="#contact">Contact me</a>
+                <h2 class="home__title">Hello<br /> I'm Front-end developer, <strong class="home__title-strong">
+                        SooYeon</strong>
+                </h2>
+                <p class="home__description">A software engineer currently residing in Aurora, CO</p>
+                <a class="home__contact" href="#contact">Contact me</a>
             </div>
         </section>
         <!-- about -->
