--- a/index.html
+++ b/index.html
@@ -64,41 +64,44 @@
             </div>
         </section>
         <!-- about -->
-        <section id="about">
-            <h2>About me</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus pariatur, aspernatur animi rem saepe
+        <section class="section max-container" id="about">
+            <h2 class="title">About me</h2>
+            <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus pariatur,
+                aspernatur
+                animi rem
+                saepe
                 optio, obcaecati perferendis ipsam accusamus aperiam veritatis autem id officia in placeat omnis maiores
                 provident sunt!</p>
-            <ul>
-                <li class="frontend">
-                    <i class="fa-brands fa-html5"></i>
-                    <p>Front-end</p>
+            <ul class="majors">
+                <li class="major">
+                    <i class="fa-brands fa-html5 major__icon"></i>
+                    <p class="major__title">Front-end</p>
                     <p>HTML, CSS, JavaScript, TypeScript, React, Vue, Web APIs </p>
                 </li>
-                <li class="backend">
-                    <i class="fa-solid fa-server"></i>
-                    <p>Back-end</p>
+                <li class="major">
+                    <i class="fa-solid fa-server major__icon"></i>
+                    <p class="major__title">Back-end</p>
                     <p>Java, JavaScript, Go, NodeJs, Rest APIs, GraphQL</p>
                 </li>
-                <li class="mobile">
-                    <i class="fa-solid fa-mobile"></i>
-                    <p>Mobile</p>
+                <li class="major">
+                    <i class="fa-solid fa-mobile major__icon"></i>
+                    <p class="major__title">Mobile</p>
                     <p>Android, iOS, React Native, Flutter, Java, Swift, Kotlin</p>
                 </li>
             </ul>
-            <ul>
-                <li>
+            <ul class="jobs">
+                <li class="job">
                     <img src="images/jobs/google.png" alt="google logo" />
                     <div>
-                        <p>Google as Senior Software Engineer</p>
-                        <p>2019 Oct - Until now</p>
+                        <p class="job__name">Google as Senior Software Engineer</p>
+                        <p class="job__period">2019 Oct - Until now</p>
                     </div>
                 </li>
-                <li>
+                <li class="job">
                     <img src="images/jobs/samsung.png" alt="samsung logo" />
                     <div>
-                        <p>Samsung as Software Engineer</p>
-                        <p>2014 Sept - 2019 Oct</p>
+                        <p class="job__name">Samsung as Software Engineer</p>
+                        <p class="job__period">2014 Sept - 2019 Oct</p>
                     </div>
                 </li>
             </ul>
@@ -139,9 +142,9 @@
                 </div>
             </div>
         </section> -->
-        <section id="skills">
-            <h2>My Skills</h2>
-            <p>Skills & Attributes</p>
+        <section id="skills" class="section">
+            <h2 class="title">My Skills</h2>
+            <p class="description">Skills & Attributes</p>
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias
                 doloremque sint deleniti vel quod itaque molestias, suscipit dolor
@@ -212,9 +215,9 @@
         </section>
 
         <!-- my work -->
-        <section id="work">
-            <h2>My work</h2>
-            <p>project</p>
+        <section id="work" class="section">
+            <h2 class="title">My work</h2>
+            <p class="description">project</p>
             <ul>
                 <li><button>All <span>8</span>
                     </button>
@@ -288,9 +291,9 @@
 
         </section>
         <!-- testimonial -->
-        <sectionv id="testimonial">
-            <h2>Testimonials</h2>
-            <p>Se what they say about me</p>
+        <section id="testimonial" class="section">
+            <h2 class="title">Testimonials</h2>
+            <p class="description">See what they say about me</p>
             <ul>
                 <li>
                     <img src="images/testimonials/people1.webp" alt="person1" />
@@ -323,7 +326,7 @@
                 </li>
             </ul>
 
-        </sectionv>
+        </section>
         <!-- Arrow up -->
         <aside>
             <a href="#home" title="back to top">
@@ -336,9 +339,9 @@
     </main>
     <!-- Footer -->
     <footer>
-        <div id="contact">
-            <h2>Let's talk</h2>
-            <p>soolotus632@gmail.com</p>
+        <div id="contact" class="section">
+            <h2 class="title">Let's talk</h2>
+            <p class="description">soolotus632@gmail.com</p>
             <ul>
                 <li><a href="https://github.com/soolotus" targer="_blank" title="my github">
                         <i class="fa-brands fa-github"></i></a>
