--- a/index.html
+++ b/index.html
@@ -314,37 +314,37 @@
 
         </section>
         <!-- testimonial -->
-        <section id="testimonial" class="section">
+        <section id="testimonial" class="section max-container">
             <h2 class="title">Testimonials</h2>
             <p class="description">See what they say about me</p>
-            <ul>
-                <li>
-                    <img src="images/testimonials/people1.webp" alt="person1" />
-                    <div>
+            <ul class="testimonials">
+                <li class="testimonial">
+                    <img src="images/testimonials/people1.webp" alt="person1" class=testimonial__img />
+                    <div class="testimonial__bubble">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem tempore quo a aperiam ad
                             molestiae nostrum hic ratione fugiat? Placeat expedita consequatur perferendis ad?
                             Reiciendis incidunt sunt quaerat perspiciatis cumque.</p>
-                        <p><a href="#">Medeline</a> / Oxford</p>
+                        <p><a href="#" class="testimonial__bublle__name">Medeline</a> / Oxford</p>
                     </div>
 
                 </li>
 
-                <li>
-                    <img src="images/testimonials/people2.webp" alt="person2" />
-                    <div>
+                <li class="testimonial">
+                    <img src="images/testimonials/people2.webp" alt="person2" class=testimonial__img />
+                    <div class="testimonial__bubble">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem tempore quo a aperiam ad
                             molestiae nostrum hic ratione fugiat? Placeat expedita consequatur perferendis ad?
                             Reiciendis incidunt sunt quaerat perspiciatis cumque.</p>
-                        <p><a href="#">Medeline</a> / Oxford</p>
+                        <p><a href="#" class="testimonial__bublle__name">Medeline</a> / Oxford</p>
                     </div>
                 </li>
-                <li>
-                    <img src="images/testimonials/people3.webp" alt="person3" />
-                    <div>
+                <li class="testimonial">
+                    <img src="images/testimonials/people3.webp" alt="person3" class=testimonial__img />
+                    <div class="testimonial__bubble">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem tempore quo a aperiam ad
                             molestiae nostrum hic ratione fugiat? Placeat expedita consequatur perferendis ad?
                             Reiciendis incidunt sunt quaerat perspiciatis cumque.</p>
-                        <p><a href="#">Medeline</a> / Oxford</p>
+                        <p><a href="#" class="testimonial__bublle__name">Medeline</a> / Oxford</p>
                     </div>
                 </li>
             </ul>
