--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         </section>
         <!-- Arrow up -->
         <aside>
-            <a href="#home" title="back to top">
+            <a class="arrow-up" href="#home" title="back to top">
                 <i class="fa-solid fa-arrow-up"></i>
             </a>
 
@@ -363,18 +363,19 @@
     <!-- Footer -->
     <footer>
         <div id="contact" class="section">
-            <h2 class="title">Let's talk</h2>
-            <p class="description">soolotus632@gmail.com</p>
-            <ul>
-                <li><a href="https://github.com/soolotus" targer="_blank" title="my github">
-                        <i class="fa-brands fa-github"></i></a>
-                </li>
-                <li><a href="https://www.linkedin.com/in/soo-yeon-seong-711313233/" targer="_blank" title="my github">
-                        <i class="fa-brands fa-linkedin"></i></a>
-                </li>
-            </ul>
-            <span>Git</span>
-            <span>Linked In</span>
+            <div class="max-container">
+                <h2 class="title">Let's talk</h2>
+                <p class="description">soolotus632@gmail.com</p>
+                <ul class="contact__links">
+                    <li><a href="https://github.com/soolotus" targer="_blank" title="my github" class="contact__link">
+                            <i class=" fa-brands fa-github"></i></a>
+                    </li>
+                    <li "><a href=" https://www.linkedin.com/in/soo-yeon-seong-711313233/" targer="_blank"
+                        title="my github" class="contact__link">
+                        <i class=" fa-brands fa-linkedin"></i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
 
