--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 class="header__logo__title"><a href="#">SooYeon</a>
             </h1>
         </div>
-        <nav>
+        <nav class="header__nav">
             <ul class="header__menu">
                 <li><a class="header__menu__item active" href="#home">Home</a></li>
                 <li><a class="header__menu__item" href="#about">About</a></li>
