--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
     <main>
         <!-- home -->
         <section id="home">
-            <img class="home__avatar" src="images/sooyeon.png" alt="SooYeon">
-            <div>
-                <h2 class="home__title">Hello<br /> I'm Front-end developer, <strong class="home__title-strong">
-                        SooYeon</strong>
-                </h2>
-                <p class="home__description">A software engineer currently residing in Aurora, CO</p>
-                <a class="home__contact" href="#contact">Contact me</a>
+            <div class='home__contents'>
+                <img class="home__avatar" src="images/sooyeon.png" alt="SooYeon">
+                <div>
+                    <h2 class="home__title">Hello<br /> I'm Front-end developer, <strong class="home__title-strong">
+                            SooYeon</strong>
+                    </h2>
+                    <p class="home__description">A software engineer currently residing in Aurora, CO</p>
+                    <a class="home__contact" href="#contact">Contact me</a>
+                </div>
             </div>
         </section>
         <!-- about -->
