--- a/index.html
+++ b/index.html
@@ -32,11 +32,18 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <div class="header__logo">
-            <img class="header__logo__img" src="images/favicon.ico" alt="">
-            <h1 class="header__logo__title"><a href="#">SooYeon</a>
-            </h1>
+        <div class='header__mobilebox'>
+            <div class="header__logo">
+                <img class="header__logo__img" src="images/favicon.ico" alt="">
+                <h1 class="header__logo__title"><a href="#">SooYeon</a>
+                </h1>
+            </div>
+            <button class="header__toggle" aria-label="navigation menu toggle">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+
         </div>
+
         <nav class="header__nav">
             <ul class="header__menu">
                 <li><a class="header__menu__item active" href="#home">Home</a></li>
