--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- JavaScript -->
-    <script src="src/main.js" defer></script>
+    <script type="module" src="src/main.js" defer></script>
+    <script type="module" src="src/projects.js" defer></script>
 
 </head>
 
@@ -232,28 +233,28 @@
                 <p class="description">projects</p>
                 <ul class="categories">
                     <li>
-                        <button class="category category--selected">
+                        <button class="category category--selected" data-category="all">
                             All <span class="category__count">8</span>
                         </button>
                     </li>
                     <li>
-                        <button class="category">
+                        <button class="category" data-category="front-end">
                             Front-end<span class="category__count">3</span>
                         </button>
                     </li>
                     <li>
-                        <button class="category">
+                        <button class="category" data-category="back-end">
                             Back-end <span class="category__count">3</span>
                         </button>
                     </li>
                     <li>
-                        <button class="category">
+                        <button class="category" data-category="mobile">
                             Mobile <span class="category__count">2</span>
                         </button>
                     </li>
                 </ul>
                 <ul class="projects">
-                    <li class="project"><a href="#" target="_blank">
+                    <li class="project" data-type="front-end"><a href="#" target="_blank">
                             <img src="images/projects/project1.webp" alt="project1" class="project__img" />
                             <div class="project__metadata">
                                 <h3 class="project__title">Project #1</h3>
@@ -262,14 +263,14 @@
                         </a>
                     </li>
 
-                    <li class="project"><a href="#" target="_blank">
+                    <li class="project" data-type="front-end"><a href="#" target="_blank">
                             <img src="images/projects/project2.webp" alt="project2" class="project__img" />
                             <div class="project__metadata">
                                 <h3 class="project__title">Project #2</h3>
                                 <p>Clone Coding with HTML, CSS</p>
                             </div>
                         </a></li>
-                    <li class="project"><a href="#" target="_blank">
+                    <li class="project" data-type="front-end"><a href="#" target="_blank">
                             <img src="images/projects/project3.webp" alt="project3" class="project__img" />
                             <div class="project__metadata">
                                 <h3 class="project__title">Project #3</h3>
@@ -277,7 +278,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project"><a href="#" target="_blank">
+                    <li class="project" data-type="back-end"><a href="#" target="_blank">
                             <img src="images/projects/project4.webp" alt="project4" class="project__img" />
                             <div class="project__metadata">
                                 <h3 class="project__title">Project #4</h3>
@@ -285,7 +286,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project"><a href="#" target="_blank">
+                    <li class="project" data-type="back-end"><a href="#" target="_blank">
                             <img src="images/projects/project5.webp" alt="project5" class="project__img" />
                             <div class="project__metadata">
                                 <h3 class="project__title">Project #5</h3>
@@ -293,14 +294,14 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project"><a href="#" target="_blank">
+                    <li class="project" data-type="back-end"><a href="#" target="_blank">
                             <img src="images/projects/project6.webp" alt="project6" class="project__img" />
                             <div class="project__metadata">
                                 <h3 class="project__title">Project #6</h3>
                                 <p>Clone Coding with HTML, CSS</p>
                             </div>
                         </a></li>
-                    <li class="project"><a href="#" target="_blank">
+                    <li class="project" data-type="mobile"><a href="#" target="_blank">
                             <img src="images/projects/project7.webp" alt="project7" class="project__img" />
                             <div class="project__metadata">
                                 <h3 class="project__title">Project #7</h3>
@@ -308,7 +309,7 @@
                             </div>
                         </a>
                     </li>
-                    <li class="project"><a href="#" target="_blank">
+                    <li class="project" data-type="mobile"><a href="#" target="_blank">
                             <img src="images/projects/project8.webp" alt="project8" class="project__img" />
                             <div class="project__metadata">
                                 <h3 class="project__title">Project #8</h3>
