--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!--OG open graph data -->
     <meta property="og:title" content="SooYeon's portfolio" />
     <meta property="og:type" content="website">
-    <meta property="og:url" content="URL">
-    <meta property="og:image" content="URL">
+    <meta property="og:url" content="https://soolotus.github.io/portfolio/">
+    <meta property="og:image" content="https://soolotus.github.io/portfolio/images/og.webp">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
